# bbox

./: #comp.py  COMPAARE.py  main.py  pyproject.toml  roi_adjuster.py  roi_funtion.py-bak.txt  structure.md
.venv3.11/: pyvenv.cfg
.venv3.11/Scripts/: activate  activate.bat
.winvenv/: pyvenv.cfg
.winvenv/Scripts/: activate  activate.bat
document_extractor/src/: roi_extractor.py
document_extractor/src/gui/: document_processor.py  main.py  main_window.py  template_editor.py  template_manager.py
old/: image_label.py  roi_adjuster.py
src/: README-TECH.md  README.md  config.ini  main.py
src/gui/: template_editor.py  template_editor_branch2.py  template_manager.py
src/templates/: NE.json  nota de empenho.json
src/templates/RG/: NE.json  credito em conta.json  nome.json  nota de empenho.json
