[tool.poetry]
name = "bbox"
version = "0.1.0"
description = "aplicacao para desenhar interativamente boundingboxes em documento e processa-los em batch"
authors = ["sindlinger <candeia.goncalves@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyside6 = "^6.8.1.1"
opencv-python = "^4.11.0.86"
pytesseract = "^0.3.13"
numpy = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"